@@ -16,7 +16,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.document.Document;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.document.DocumentGenerationRequest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -51,8 +50,10 @@ public class ConsentOrderNotApprovedDocumentServiceTest extends BaseServiceTest 
     private static final String COVER_LETTER_URL = "cover_letter_url";
     private static final String GENERAL_ORDER_URL = "general_letter_url";
 
-    @Autowired private ConsentOrderNotApprovedDocumentService consentOrderNotApprovedDocumentService;
-    @Autowired private DocumentClient documentClientMock;
+    @Autowired
+    private ConsentOrderNotApprovedDocumentService consentOrderNotApprovedDocumentService;
+    @Autowired
+    private DocumentClient documentClientMock;
 
     private CaseDetails caseDetails;
 
@@ -141,7 +142,7 @@ public class ConsentOrderNotApprovedDocumentServiceTest extends BaseServiceTest 
     private void addConsentedInContestedConsentOrderNotApproved() {
         Map<String, Object> caseData = caseDetails.getData();
 
-        caseData.put(CONTESTED_CONSENT_ORDER_NOT_APPROVED_COLLECTION, Arrays.asList(ImmutableMap.of(
+        caseData.put(CONTESTED_CONSENT_ORDER_NOT_APPROVED_COLLECTION, List.of(ImmutableMap.of(
             "id", UUID.randomUUID().toString(),
             "value", ImmutableMap.of(
                 "consentOrder", ImmutableMap.of(
